# adventofcode

./: adventmain.py  day11.py  day12.py  day13.py  day14.py  day17.py  day2.py  day23.py  day2input.txt  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  setup.sh  template.py  test.py
2015/: day1.py  day11.py  day12.py  day13.py  day14.py  day17.py  day23.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2016/: adventmain.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2016/input/: .#day4_input.txt
2016/tests/day7/: test.txt
2022/psql/: day1.sql
2022/rust/: Cargo.toml  day21-out.txt  out.txt
2022/rust/resources/: day11.txt
2022/rust/src/: coord.rs  cursor.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  puzzle.rs  reader.rs
tests/day12/: test.txt
tests/day4/: test2.txt
tests/day7/: mytest.txt
tests/day8/: .#mytest.txt
