[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.5"
text_io = "0.1.12"
petgraph = "0.6.2"
scanner-rust = "2.0.16"
nom = "7"
num-integer = "0.1"
fraction = "0.12.2"
